fix navbar collapse

--- a/public/style.css
+++ b/public/style.css
@@ -36,3 +36,15 @@ body {
     -webkit-box-shadow: inset 0 -0.1rem 0.25rem rgba(0,0,0,.1);
     box-shadow: inset 0 -0.1rem 0.25rem rgba(0,0,0,.1);
 }
+
+.navbar-collapse.collapse.in {
+  display: block!important;
+}
+
+@media (max-width: 991px) {
+  .navbar-toggleable-md>.container {
+      padding-right: 0;
+      padding-left: 0;
+      min-width: 100%;
+  }
+}
